--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
 				data-separator-vertical="^\n\n"
 				data-separator-notes="^Note:"
 				data-charset="UTF-8">
-			</section>
+            </section>			
+            
+            <section data-markdown="history.md"
+                data-separator="^\n\n\n"  
+                data-separator-vertical="^\n\n"
+                data-separator-notes="^Note:"
+                data-charset="UTF-8">
+            </section>
 
 		</div>
 	</div>
