--- a/index.html
+++ b/index.html
@@ -67,19 +67,20 @@
 				</p>
 			</section>
 
-			<section data-markdown="README.md"
-				data-separator="^\n\n\n"  
-				data-separator-vertical="^\n\n"
-				data-separator-notes="^Note:"
-				data-charset="UTF-8">
-            </section>			
-            
             <section data-markdown="history.md"
                 data-separator="^\n\n\n"  
                 data-separator-vertical="^\n\n"
                 data-separator-notes="^Note:"
                 data-charset="UTF-8">
             </section>
+
+            <section data-markdown="gui.md"
+				data-separator="^\n\n\n"  
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="UTF-8">
+            </section>			
+            
 
 		</div>
 	</div>
